--- a/WriteApi/appsettings.json
+++ b/WriteApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseType": "PostgreSQL",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;port=5433;Database=eshop;IntegratedSecurity=true"
+  }
 }
