--- a/WriteApi/appsettings.json
+++ b/WriteApi/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DatabaseType": "PostgreSQL",
-  "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;port=5433;Database=eshop;IntegratedSecurity=true"
-  }
+  "AllowedHosts": "*"
 }
