--- a/WriteApi/appsettings.Development.json
+++ b/WriteApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Server=localhost;port=5433;Database=eshop;IntegratedSecurity=true"
+    "DefaultConnection": "User ID=postgres;Password=jQ^wxJeE@8x4sZ;Server=192.168.42.3;port=5432;Database=eshop;IntegratedSecurity=true"
   }
 }
