--- a/WriteApi/appsettings.Development.json
+++ b/WriteApi/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=jQ^wxJeE@8x4sZ;Server=192.168.42.3;port=5432;Database=eshop;IntegratedSecurity=true"
+  },
+  "MongoDB": {
+    "ConnectionStrings": "mongodb://root:sduD2xnvZGLFCq@192.168.42.5:27017",
+    "DatabaseName": "eshop",
+    "UserCollection": "Users",
+    "ProductCollection": "Products"
   }
 }
