--- a/Dal.Common/Dal.Common.csproj
+++ b/Dal.Common/Dal.Common.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>PDBProject.Common</RootNamespace>
+        <RootNamespace>PDBProject.Dal.Common</RootNamespace>
     </PropertyGroup>
 
 </Project>
